force-app/main/default/objects/SObject_Clone_Field__mdt/SObject_Clone_Field__mdt.object-meta.xml
<CustomObject>
    <label>SObject Clone Field</label>
    <pluralLabel>SObject Clone Fields</pluralLabel>
</CustomObject>