force-app/main/default/objects/SObject_Clone_Field__mdt/fields/Object_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Field_Name__c</fullName>
    <label>Object Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>