force-app/main/default/objects/SObject_Clone_Field__mdt/fields/SObject_Clone_Model__c.field-meta.xml
<CustomField>
    <fullName>SObject_Clone_Model__c</fullName>
    <label>SObject Clone Model</label>
    <referenceTo>SObject_Clone_Model__mdt</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>