force-app/main/default/objects/SObject_Clone_Field__mdt/fields/Target_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Name__c</fullName>
    <label>Target Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>